# tbot

./: hello.py  pyproject.toml  readme.md
scripts/: check_func.py  sec.py
tbot.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_capitalize.py
